--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,9 @@
 language: scala
 scala:
    - 2.11.12
+
+script:
+  - sbt clean coverage test coverageReport &&
+    sbt coverageAggregate
+after_success:
+  - sbt coveralls
