--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ scala:
    - 2.11.12
 
 script:
-  - sbt clean coverage test coverageReport
+  - sbt clean test
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
